K8S/Policies/pod_allowedmemorylimit.yml
apiVersion: v1
kind: Pod
metadata:
  name: aspnetapp
  labels:
    app: aspnetapp
spec:
  containers:
  - image: "mcr.microsoft.com/dotnet/core/samples:aspnetapp"
    name: aspnetapp-image
    resources:
      requests:
        memory: "128Mi"
        cpu: "250m"
    ports:
    - containerPort: 80
      protocol: TCP
